update by ganesh
Tasks need to be done: 1. Banner Image 2. All Links Connectivity means href and navbar and footer part so when clicked on it user should navigated there. 3. Slogan present on the image should be movable and in one line 4. Form changes: student name, parent name, phone number, address school name, standard ,board and message field  5. Footer: Quick links mdhe about , gallery, why join asa vaigere tak means click kelyvr direct tikde neil user la

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       <img src="assets/logo.png" alt="Vertex Academy Logo" />
     </div>
     <ul class="nav-links" id="navLinks">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Gallery</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#contact">Contact</a></li>
+
     </ul>
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
@@ -29,7 +30,7 @@
   </nav>
 
   <!-- Hero Section -->
-<section class="hero">
+<section class="hero" id="hero">
   <div class="hero-overlay">
     <div class="hero-content">
       <h1>Planning + Hard Work + Confidence = <span>Success</span></h1>
@@ -113,7 +114,8 @@
 
   
 <!-- Gallery Section -->
-<section class="gallery-section">
+<section class="gallery-section" id="gallery">
+
   <div class="container">
     <h2><span>Our</span> Classroom Moments</h2>
     <p class="subtext">A glimpse into the learning environment at Vertex Academy</p>
@@ -159,38 +161,30 @@
 
 
   <!-- Contact -->
-   <!-- Contact / Enquiry Section -->
+<!-- Contact / Enquiry Section -->
 <section class="contact-section" id="contact">
   <div class="container">
     <h2><span>Get in Touch</span> with Vertex Academy</h2>
     <p class="subtext">Have a question or want to enquire about admission? We’d love to hear from you!</p>
 
-    <form id="whatsappForm">
-      <input type="text" id="name" placeholder="Your Name" required />
-      <input type="email" id="email" placeholder="Email Address" required />
-      <input type="tel" id="phone" placeholder="Phone Number" required />
-      <select id="standard" required>
-        <option value="">Select Standard</option>
-        <option value="1st">1st</option>
-        <option value="2nd">2nd</option>
-        <option value="3rd">3rd</option>
-        <option value="4th">4th</option>
-        <option value="5th">5th</option>
-        <option value="6th">6th</option>
-        <option value="7th">7th</option>
-        <option value="8th">8th</option>
-        <option value="9th">9th</option>
-        <option value="10th">10th</option>
-      </select>
-      <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
+    <form id="contactForm">
+      <input type="text" id="studentName" name="studentName" placeholder="Student Name" required />
+      <input type="text" id="parentName" name="parentName" placeholder="Parent Name" required />
+      <input type="tel" id="phone" name="phone" placeholder="Phone Number" required />
+      <input type="text" id="address" name="address" placeholder="Address" required />
+      <input type="text" id="school" name="school" placeholder="School Name" required />
+      <input type="text" id="standard" name="standard" placeholder="Standard (e.g., 8th, 9th)" required />
+      <input type="text" id="board" name="board" placeholder="Board (e.g., CBSE, ICSE)" required />
+      <textarea id="message" name="message" placeholder="Your Message" rows="4" required></textarea>
       <button type="submit">Send via WhatsApp</button>
     </form>
-    <p id="successMessage" style="display: none; color: green; margin-top: 10px;">
-    <!-- ✅ Message ready! Redirecting to WhatsApp... -->
-  </p>
 
+    <p id="successMessage" style="display: none; color: green; margin-top: 10px;">
+      ✅ Message ready! Redirecting to WhatsApp...
+    </p>
   </div>
 </section>
+
 
   <!-- Google Map -->
   <!-- 📍 Catchy Google Map Section -->
@@ -241,10 +235,10 @@
 
     <!-- Quick Links -->
     <div style="flex: 1 1 150px;">
-      <h3 style="font-size: 1.2rem; font-weight: 600; margin-bottom: 10px;">Quick Links</h3>
       <ul style="list-style: none; padding: 0; color: #9ca3af; line-height: 2;">
         <li><a href="#about" style="color: inherit; text-decoration: none;">About</a></li>
-        <!-- <li><a href="#courses" style="color: inherit; text-decoration: none;">Courses</a></li> -->
+        <li><a href="#gallery" style="color: inherit; text-decoration: none;">Gallery</a></li>
+        <li><a href="#whyjoin" style="color: inherit; text-decoration: none;">Why Join</a></li>
         <li><a href="#map-section" style="color: inherit; text-decoration: none;">Location</a></li>
         <li><a href="#contact" style="color: inherit; text-decoration: none;">Contact</a></li>
       </ul>
@@ -260,15 +254,15 @@
 
     <!-- Social Icons (optional) -->
     <div style="flex: 1 1 200px;">
-      <h3 style="font-size: 1.2rem; font-weight: 600; margin-bottom: 10px;">Follow Us</h3>
-      <div style="display: flex; gap: 15px; font-size: 1.5rem;">
-        <!-- <a href="#" title="Website" style="color: #9ca3af; text-decoration: none;">🌐</a> -->
-        <a href="#" title="Instagram" style="color: #9ca3af; text-decoration: none;">📸</a>
-        <!-- <a href="#" title="LinkedIn" style="color: #9ca3af; text-decoration: none;">💼</a> -->
-        <!-- <a href="#" title="YouTube" style="color: #9ca3af; text-decoration: none;">▶️</a> -->
-      </div>
-    </div>
+  <h3 style="font-size: 1.2rem; font-weight: 600; margin-bottom: 10px;">Follow Us</h3>
+  <div style="display: flex; gap: 15px; font-size: 1.5rem;">
+    <a href="https://www.linkedin.com/in/yourprofile" target="_blank" title="LinkedIn" style="color: #9ca3af; text-decoration: none;">💼</a>
+    <a href="mailto:contact@vertexacademy.in" title="Gmail" style="color: #9ca3af; text-decoration: none;">📧</a>
+    <a href="tel:+917021808718" title="Call Us" style="color: #9ca3af; text-decoration: none;">📞</a>
+    <a href="https://www.instagram.com/yourprofile" target="_blank" title="Instagram" style="color: #9ca3af; text-decoration: none;">📸</a>
   </div>
+</div>
+
 
   <!-- Bottom Strip -->
   <div style="border-top: 1px solid #374151; margin-top: 40px; padding-top: 20px; text-align: center; color: #9ca3af; font-size: 14px;">
