--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <section class="hero" id="hero">
   <div class="hero-overlay">
     <div class="hero-content">
-      <h1>Planning + Hard Work + Confidence = <span>Success</span></h1>
+      <!--<h1>Planning + Hard Work + Confidence = <span>Success</span></h1> -->
       <a href="#contact" class="hero-btn">Enroll Now</a>
     </div>
   </div>
