--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <!-- Hero Section -->
 <section class="hero1" id="hero">
   <div class="floating-books">
-  <img src="/assets/book.png" alt="Stack of Books" class="img1">
-  <img src="/assets/book.png" alt="Stack of Books" class="img2">
+  <img src="assets/book.png" alt="Stack of Books" class="img1">
+  <img src="assets/book.png" alt="Stack of Books" class="img2">
 </div>
 
       <div class="container1">
