--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vertex Academy</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+
   <!-- Add Lightbox CSS (if allowed, or use custom modal later) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
 
@@ -50,7 +52,7 @@
 </div>
 
       <div class="container1">
-      <h2 class="subtitle">Vertex Academy</h2>
+      <h2 class="subtitle">Vertex Academy since 1996</h2>
       <div class="underline"></div>
       <h1 class="title">Excellence in Education</h1>
 
@@ -81,36 +83,44 @@
  <!-- About Us Section -->
 <section class="about" id="about">
   <div class="container">
-    <div class="about-image">
-      <img src="assets/founder_image.jpg" alt="Founder Image">
-    </div>
-    <div class="about-content">
-      <h2>About <span>Vertex Academy</span></h2>
-      <p>
-        At <strong>Vertex Academy</strong>, we believe in shaping strong academic foundations from Class 1 to Class 10. Our goal is not just to help students score marks, but to help them understand, grow, and love learning.
-      </p>
-      <p>
-        Founded by <strong>Mr. Deepak Ghatkar</strong>, a passionate educator with over [X] years of experience, Vertex Academy is more than just a tuition class — it’s a place where students are guided, mentored, and inspired to reach their full potential.
-      </p>
-      <p>
-        With a perfect blend of modern teaching techniques, personalized attention, and regular assessments — we ensure each child gets the care and clarity they deserve.
-      </p>
-      <div class="about-highlights">
-      <div class="highlight-card">
-        <h4>Standards</h4>
-        <p>1st to 10th</p>
-      </div>
-      <div class="highlight-card">
-        <h4>Board</h4>
-        <p>SSC and CBSE</p>
-      </div>
-      <div class="highlight-card">
-        <h4>Medium</h4>
-        <p>English and Semi-English</p>
-      </div>
+    <h2 class="about-heading">About <span>Vertex Academy</span></h2>
+
+    <div class="about-wrapper fade-in">
+      <div class="about-image">
+        <img src="assets/founder_image.jpg" alt="Founder Image" />
       </div>
 
-      <a href="#contact" class="about-btn">Join Us Today</a>
+      <div class="about-content">
+        <p>
+          At <strong>Vertex Academy</strong>, we believe in shaping strong academic foundations from Class 1 to Class 10. Our goal is not just to help students score marks, but to help them understand, grow, and love learning.
+        </p>
+        <p>
+          Founded by <strong>Mr. Deepak Ghatkar</strong>, a passionate educator with over <strong>25 years of experience</strong>. He completed his graduation in <strong>Textile Engineering</strong> from the prestigious <strong>VJTI (Veermata Jijabai Technological Institute)</strong>. With a deep love for teaching and mentoring, he has helped thousands of students unlock their potential through personal guidance and consistent support.
+        </p>
+        <p>
+          With a perfect blend of modern teaching techniques, personalized attention, and regular assessments — we ensure each child gets the care and clarity they deserve.
+        </p>
+
+        <div class="about-highlights">
+          <div class="highlight-card">
+            <i class="fas fa-graduation-cap"></i>
+            <h4>Standards</h4>
+            <p>1st to 10th</p>
+          </div>
+          <div class="highlight-card">
+            <i class="fas fa-book-open"></i>
+            <h4>Board</h4>
+            <p>SSC and CBSE</p>
+          </div>
+          <div class="highlight-card">
+            <i class="fas fa-language"></i>
+            <h4>Medium</h4>
+            <p>English and Semi-English</p>
+          </div>
+        </div>
+
+        <a href="#contact" class="about-btn">Join Us Today</a>
+      </div>
     </div>
   </div>
 </section>
@@ -197,23 +207,80 @@
 
 
 
-  <!-- Contact -->
-<!-- Contact / Enquiry Section -->
 <section class="contact-section" id="contact">
   <div class="container">
     <h2><span>Get in Touch</span> with Vertex Academy</h2>
     <p class="subtext">Have a question or want to enquire about admission? We’d love to hear from you!</p>
 
-    <form id="contactForm">
-      <input type="text" id="studentName" name="studentName" placeholder="Student Name" required />
-      <input type="text" id="parentName" name="parentName" placeholder="Parent Name" required />
-      <input type="tel" id="phone" name="phone" placeholder="Phone Number" required />
-      <input type="text" id="address" name="address" placeholder="Address" required />
-      <input type="text" id="school" name="school" placeholder="School Name" required />
-      <input type="text" id="standard" name="standard" placeholder="Standard (e.g., 8th, 9th)" required />
-      <input type="text" id="board" name="board" placeholder="Board (e.g., CBSE, ICSE)" required />
-      <textarea id="message" name="message" placeholder="Your Message" rows="4" required></textarea>
-      <button type="submit">Send via WhatsApp</button>
+    <form id="contactForm" novalidate>
+      <div class="form-row">
+        <div class="form-field">
+          <label for="studentName"><i class="fas fa-user"></i> Student Name</label>
+          <input type="text" id="studentName" name="studentName" placeholder="Enter student name" required />
+          <small class="error-msg">Please enter student name</small>
+        </div>
+        <div class="form-field">
+          <label for="parentName"><i class="fas fa-user-friends"></i> Parent Name</label>
+          <input type="text" id="parentName" name="parentName" placeholder="Enter parent name" required />
+          <small class="error-msg">Please enter parent name</small>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-field">
+          <label for="phone"><i class="fas fa-phone"></i> Phone Number</label>
+          <input type="tel" id="phone" name="phone" placeholder="Enter phone number" required pattern="\d{10}" />
+          <small class="error-msg">Enter a valid 10-digit number</small>
+        </div>
+        <div class="form-field">
+          <label for="address"><i class="fas fa-map-marker-alt"></i> Address</label>
+          <input type="text" id="address" name="address" placeholder="Enter address" required />
+          <small class="error-msg">Please enter address</small>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-field">
+          <label for="school"><i class="fas fa-school"></i> School Name</label>
+          <input type="text" id="school" name="school" placeholder="Enter school name" required />
+          <small class="error-msg">Please enter school name</small>
+        </div>
+        <div class="form-field">
+          <label for="standard"><i class="fas fa-layer-group"></i> Standard</label>
+          <select id="standard" name="standard" required>
+            <option value="" disabled selected>Select Standard</option>
+            <option>1st</option><option>2nd</option><option>3rd</option><option>4th</option>
+            <option>5th</option><option>6th</option><option>7th</option><option>8th</option>
+            <option>9th</option><option>10th</option>
+          </select>
+          <small class="error-msg">Please select standard</small>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-field">
+          <label for="board"><i class="fas fa-chalkboard"></i> Board</label>
+          <select id="board" name="board" required>
+            <option value="" disabled selected>Select Board</option>
+            <option>CBSE</option><option>State Board</option>
+          </select>
+          <small class="error-msg">Please select board</small>
+        </div>
+        <div class="form-field">
+          <label for="medium"><i class="fas fa-language"></i> Medium</label>
+          <select id="medium" name="medium" required>
+            <option value="" disabled selected>Select Medium</option>
+            <option>English</option><option>Semi-English</option>
+          </select>
+          <small class="error-msg">Please select medium</small>
+        </div>
+      </div>
+
+      <label for="message"><i class="fas fa-comment-dots"></i> Your Message</label>
+      <textarea id="message" name="message" placeholder="Enter your message" rows="4" required></textarea>
+      <small class="error-msg">Please enter your message</small>
+
+      <button type="submit"><i class="fab fa-whatsapp"></i> Send via WhatsApp</button>
     </form>
 
     <p id="successMessage" style="display: none; color: green; margin-top: 10px;">
@@ -221,6 +288,7 @@
     </p>
   </div>
 </section>
+
 
 
   <!-- Google Map -->
@@ -273,6 +341,7 @@
     <!-- Quick Links -->
     <div style="flex: 1 1 150px;">
       <ul style="list-style: none; padding: 0; color: #9ca3af; line-height: 2;">
+        <li><a href="#hero" style="color: inherit; text-decoration: none;">Home</a></li>
         <li><a href="#about" style="color: inherit; text-decoration: none;">About</a></li>
         <li><a href="#gallery" style="color: inherit; text-decoration: none;">Gallery</a></li>
         <li><a href="#whyjoin" style="color: inherit; text-decoration: none;">Why Join</a></li>
@@ -295,7 +364,7 @@
   <div style="display: flex; gap: 15px; font-size: 1.5rem;">
     <a href="https://www.linkedin.com/in/yourprofile" target="_blank" title="LinkedIn" style="color: #9ca3af; text-decoration: none;">💼</a>
     <a href="mailto:contact@vertexacademy.in" title="Gmail" style="color: #9ca3af; text-decoration: none;">📧</a>
-    <a href="tel:+917021808718" title="Call Us" style="color: #9ca3af; text-decoration: none;">📞</a>
+    <!-- <a href="tel:+917021808718" title="Call Us" style="color: #9ca3af; text-decoration: none;">📞</a> -->
     <a href="https://www.instagram.com/yourprofile" target="_blank" title="Instagram" style="color: #9ca3af; text-decoration: none;">📸</a>
   </div>
 </div>
