--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="logo">
-      <img src="assets/logo.png" alt="Vertex Academy Logo" />
+      <img src="assets/logo.png" alt="Vertex Academy Logo" loading="lazy"/>
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#hero">Home</a></li>
