--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="logo">
-      <img src="assets/logo.png" alt="Vertex Academy Logo" />
+      <img src="assets/logo.webp" alt="Vertex Academy Logo" />
     </div>
     <ul class="nav-links" id="navLinks">
       <li><a href="#hero">Home</a></li>
@@ -179,35 +179,35 @@
 
       <div class="gallery-grid">
         <div class="gallery-item">
-          <img src="assets/classroom1.jpg" alt="Classroom Image 1">
+          <img src="assets/classroom1.jpg" alt="Classroom Image 1" loading="lazy">
           <!-- <div class="caption">Interactive Learning</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom3.jpg" alt="Classroom Image 2">
+          <img src="assets/classroom3.jpg" alt="Classroom Image 2" loading="lazy">
           <!-- <div class="caption">Engaging Lectures</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom9.jpg" alt="Classroom Image 3">
+          <img src="assets/classroom9.jpg" alt="Classroom Image 3" loading="lazy">
           <!-- <div class="caption">Thoughtful Environment</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom5.jpg" alt="Classroom Image 4">
+          <img src="assets/classroom5.jpg" alt="Classroom Image 4" loading="lazy">
           <!-- <div class="caption">Student Discussions</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom8.jpg" alt="Classroom Image 5">
+          <img src="assets/classroom8.jpg" alt="Classroom Image 5" loading="lazy">
           <!-- <div class="caption">Creative Learning</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom6.jpg" alt="Classroom Image 6">
+          <img src="assets/classroom6.jpg" alt="Classroom Image 6" loading="lazy">
           <!-- <div class="caption">Motivated Students</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom10.jpg" alt="Classroom Image 7">
+          <img src="assets/classroom10.jpg" alt="Classroom Image 7" loading="lazy">
           <!-- <div class="caption">Friendly Atmosphere</div> -->
         </div>
         <div class="gallery-item">
-          <img src="assets/classroom4.jpg" alt="Classroom Image 7">
+          <img src="assets/classroom4.jpg" alt="Classroom Image 7" loading="lazy">
           <!-- <div class="caption">Friendly Atmosphere</div> -->
         </div>
       </div>
